--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,27 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+  <div class="header">
+    <div class="header-middle">VISUALEMOTION</div>
+    <div class="header-left">MENU</div>
+    <div class="header-right">
+      <ul>
+        <li>HOME</li>
+      	<li>ABOUT</li>
+      </ul>
+    </div>
+  </div>
 <body>
+  <h1>美意識に、革命を。</h1>
+  <p>たっと一目で、あなたの価値観に衝撃を与える写真集が、ここにある。</p>
+  <div class="category">
+	<ul>
+	  <li>ART</li>
+	  <li>HUMAN</li>
+	  <li>VIEW</li>
+	  <li>OTHER</li>
+	</ul>
+  </div>
 
 <%= yield %>
 
