--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="header-right">
       <ul>
         <li>HOME</li>
-      	<li>ABOUT</li>
+      	<li><%= link_to "ABOUT", "#", class: "btn btn-large btn-primary" %></li>
       </ul>
     </div>
   </div>
