--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -10,7 +10,7 @@ head
 
 body
 {
-	background-image: image-url('background.png');
+	background-image: image-url('background.jpg');
 	background-size: cover;
 	color: white;
 
