edit css&html for top3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,12 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?4XU2G~E0OwQ%3D" charset="utf-8"></script>
+
+
 </head>
 <body>
     <div class="C">
@@ -26,11 +31,12 @@
 
 
   <div class="category">
+    <p>Change Category!</p>
 	<ul>
-	  <li>ART</li>
-	  <li>HUMAN</li>
-	  <li>VIEW</li>
-	  <li>OTHER</li>
+	  <li><P>ART</P></li>
+	  <li><P>HUMAN</P></li>
+	  <li><P>VIEW</P></li>
+	  <li><P>OTHER</P></li>
 	</ul>
   </div>
 
