--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,13 +1,14 @@
 body{
 	margin: 0;
 	padding: 0;
+	font-family: "リュウミン L-KL"  "Ryumin Light KL";
 	
 }
 .C{
 	background-image: image-url('bg_home01.jpg');
 	background-size: cover;
 	background-position: center;
-	height:600px;
+	height:550px;
 	width: 100%;
 
 }
@@ -56,7 +57,7 @@ h1{
 	text-align: center;
 	padding-left:100px;
 	margin: 0;
-	margin-top: 200px;
+	margin-top: 100px;
 }
 h2{
 	font-size: 1rem;
@@ -74,22 +75,36 @@ h2{
 
 
 .category{
-	height:200px;
-	width:100%;
-	display:flex;
-	background-color: red;
+	width: 300px;
+	height: 100px;
+	bottom: 20px;
+	right: 30px;
+	position: fixed;
+
+	z-index: 100;
+	background-color: rgba(0,0,0,0.3);
+	border-radius: 10px;
+		p{
+			text-align: center;
+		}
 
  	ul {
- 		width: 1200px;
  		text-align: center;
  		margin: 0 auto;
+ 		} 
+	 	li{
+			list-style: none;
+			float: left;
+			text-align: center;
+				p{
 
- 	} li{
-		list-style: none;
-		float: left;
-	
-		width: 25%;
-		text-align: center;
-
+				font-size: 10px;
+				display: block;
+				transition-duration: 1s;
+				border-radius: 5px;
+					&:hover{
+						background-color: pink;
+						}
+					}
+			}
 		}
-}
