--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,31 @@
 	</ul>
   </div>
 
+  <div class="testimage">
+  <%= image_tag 'ダウンロード (1).jpeg' %>
+  <%= image_tag 'ダウンロード (2).jpeg' %>
+  <%= image_tag 'ダウンロード (3).jpeg' %>
+  <%= image_tag 'ダウンロード (4).jpeg' %>
+  <%= image_tag 'ダウンロード (5).jpeg' %>
+  <%= image_tag 'ダウンロード (6).jpeg' %>
+  <%= image_tag 'ダウンロード (7).jpeg' %>
+  <%= image_tag 'ダウンロード (8).jpeg' %>
+  <%= image_tag 'ダウンロード (9).jpeg' %>
+  <%= image_tag 'ダウンロード (10).jpeg' %>
+  <%= image_tag 'ダウンロード (11).jpeg' %>
+  <%= image_tag 'ダウンロード (12).jpeg' %>
+  <%= image_tag 'ダウンロード (13).jpeg' %>
+  <%= image_tag 'ダウンロード (14).jpeg' %>
+  <%= image_tag 'ダウンロード (15).jpeg' %>
+  <%= image_tag 'ダウンロード (16).jpeg' %>
+  <%= image_tag 'ダウンロード (17).jpeg' %>
+  <%= image_tag 'ダウンロード (18).jpeg' %>
+  <%= image_tag 'ダウンロード (19).jpeg' %>
+  <%= image_tag 'ダウンロード (20).jpeg' %>
+  <%= image_tag 'ダウンロード .jpeg' %>
+</div>
+
+
 <%= yield %>
 
 </body>
