--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,36 @@
 
 
 
-  <div class="category">
-    <p>Change Category!</p>
-	<ul>
-	  <li><P>ART</P></li>
-	  <li><P>HUMAN</P></li>
-	  <li><P>VIEW</P></li>
-	  <li><P>OTHER</P></li>
-	</ul>
+  <div class="fixedmenu">
+
+    <div class="category">
+      <p>PhotoType</p>
+    </div>
+
+    <div class="sidemenu">
+      <p>
+        <i class="fa fa-bars"></i>
+         MENU
+      </p>
+    </div>
+
+    <div class="go-home">
+      <i class="fa fa-arrow-circle-up"></i>
+    </div>
+
+
+
+
+
+    
+    <nav>
+    	<ul>
+        <li><P>ART</P></li>
+        <li><P>HUMAN</P></li>
+        <li><P>VIEW</P></li>
+        <li><P>OTHER</P></li>
+    	</ul>
+    </nav>
   </div>
 
   <div class="testimage">
