--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,14 @@
 
 
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="js/jquery.simplesidebar.js"></script>
   <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?4XU2G~E0OwQ%3D" charset="utf-8"></script>
+  <script src="js/jquery.lightbox.js"></script>
 
 
 </head>
 <body>
+  <div class="wrapper">
     <div class="C">
       <header>
         <div class="header">
@@ -36,12 +39,18 @@
       <p>PhotoType</p>
     </div>
 
+   
     <div class="sidemenu">
-      <p>
+
+      <div class="toolbar">
+        <div id="open-sb" class="menu-icon menu-button menu-right">
         <i class="fa fa-bars"></i>
          MENU
-      </p>
-    </div>
+        </div>
+      </div>
+      
+    
+  </div>
 
     <div class="go-home">
       <i class="fa fa-arrow-circle-up"></i>
@@ -63,6 +72,7 @@
   </div>
 
   <div class="testimage">
+  <%= link_to image_tag('ダウンロード (1).jpeg'), 'ダウンロード (1).jpeg',:rel => "lightbox" %>
   <%= image_tag 'ダウンロード (1).jpeg' %>
   <%= image_tag 'ダウンロード (2).jpeg' %>
   <%= image_tag 'ダウンロード (3).jpeg' %>
@@ -85,9 +95,40 @@
   <%= image_tag 'ダウンロード (20).jpeg' %>
   <%= image_tag 'ダウンロード .jpeg' %>
 </div>
+ </div>
+
+
+
+  <section class="sidebar">
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+  </section>
 
 
 <%= yield %>
+
+<script>
+  $( ".sidebar" ).simpleSidebar({
+      settings: {
+        opener: ".button",
+        wrapper: ".wrapper",
+        animation: {
+          easing: "easeOutQuint"
+        }
+      },
+      sidebar: {
+        align: "right",
+        width: 300,
+        closingLinks: 'a',
+         style: {
+            zIndex: 100
+        }
+      }
+    });
+  </script>
 
 </body>
 </html>
