--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -1,4 +1,4 @@
-h1
+/*h1
 {
 	background-image: image-url('about01png');
 	background-size: cover;
@@ -13,4 +13,4 @@ h2
 h3
 {
 	ist-style: none;
-}
+}*/
