--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
-@import "pages.css";
-
- *= require 'css/lightbox'
+@import "common.css";
+@import "books.css";
+@import "contacts.css";
+@import "about.css";
+/*@import "scaffolds.css";
+*/
+*= require css/lightbox
