--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,37 +1,33 @@
-<h1>Listing contacts</h1>
-
-<table>
-  <thead>
+<%= form_for @contact, :url => contact_confirm_path do |f| %>
+  <div class="page-header">
+    <h1>お問い合わせ</h1>
+  </div>
+ 
+  <% if @contact.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <strong>入力内容にエラーがあります</strong>
+      <ul>
+        <% @contact.errors.each do |attr, msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+ 
+  <table class="table">
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Content</th>
-      <th>Type</th>
-      <th>Res do</th>
-      <th>Del flg</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>名前<span class="text-danger">（必須）</span></th>
+      <td><%= f.text_field :name %></td>
     </tr>
-  </thead>
+    <tr>
+      <th>メールアドレス<span class="text-danger">（必須）</span></th>
+      <td><%= f.text_field :email %></td>
+    </tr>
+    <tr>
+      <th>お問い合わせ内容</th>
+      <td><%= f.text_area :message %></td>
+    </tr>
+  </table>
+  <%= f.submit '確認', class: 'btn btn-primary' %>
+<% end %>
 
-  <tbody>
-    <% @contacts.each do |contact| %>
-      <tr>
-        <td><%= contact.name %></td>
-        <td><%= contact.email %></td>
-        <td><%= contact.content %></td>
-        <td><%= contact.type %></td>
-        <td><%= contact.res_do %></td>
-        <td><%= contact.del_flg %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Contact', new_contact_path %>
