--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,7 +2,7 @@
 
 @import "common.css";
 @import "books.css";
-@import "contacts.css";
+/*@import "contacts.css";*/
 @import "about.css";
 /*@import "scaffolds.css";
 */
