--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -20,17 +20,8 @@ display:flex;
 color: white;
 }
 
-
-body
-{
-	background-image: image-url('background.jpg');
-	background-size: cover;
-	color: white;
-
 .header-left{
 flex-grow:1;
-
-
 line-height: 50px;
 font-size:20px;
 text-align: center;
@@ -48,7 +39,7 @@ letter-spacing:0;
 flex-grow:1;
 
 line-height: 50px;
-font-size:20px;		
+font-size:20px;   
 text-align: center;
 }
 a:link {
@@ -56,7 +47,6 @@ font-style:normal;
 text-decoration:underline;
 
 }
-
 
 h1{
 font-size: 5rem;
@@ -90,89 +80,81 @@ right: 10px;
 position: fixed;
 z-index: 100;
 background-color: rgba(0,0,0,0.5);
-		.category{
-			width: 150px;
-			float: left;
-				p{
-					font-size: 20px;
-					display: block;
-					padding: 0px;
-					text-align: center;
-					color:white;
-					width: 150px;
-					line-height: 50px;
-
-				}
-			}
-
-		.sidemenu{
-			width: 100px;
-			float: left;
-			cursor: pointer;
-				div{
-					font-size: 15px;
-					display: block;
-					float: left;
-					padding: 0px;
-					text-align: center;
-					color:white;
-					width: 100px;
-					line-height: 50px;
-				}
-			}
-
-		.go-home{
-			width: 50px;
-			float: left;
-			line-height: 50px;
-			color: white;
-			text-align: center;
-			display: block;
-
-		}
-	p{
-		height: 50px;
-		text-align: center;
-		color: white;
-		margin: 0;
-		margin-top: 0px;
-	}
-
-	ul {
-		//text-align: center;
-		margin: 0 auto;
-		width: 300px;
-		height: 50px;
-		padding: 0px;
-		} 
-	 	li{
-			list-style: none;
-			float: left;
-			padding: 0px;
-			text-align: center;
-			color:white;
-			width: 75px;
-			line-height: 50px;
-
-				p{
-				font-size: 10px;
-				display: block;
-				transition-duration: 1s;
-					&:hover{
-						background-color: pink;
-						}
-					}
-				
-			}
-		}
-
-
-
-
-.testimage {
-text-align: center;
-img{
-margin: 2px
+  .category{
+  width: 150px;
+  float: left;
+    p{
+      font-size: 20px;
+      display: block;
+      padding: 0px;
+      text-align: center;
+      color:white;
+      width: 150px;
+      line-height: 50px;
+    }
+  }
 }
 
+.sidemenu{
+  width: 100px;
+  float: left;
+  cursor: pointer;
+    div{
+      font-size: 15px;
+      display: block;
+      float: left;
+      padding: 0px;
+      text-align: center;
+      color:white;
+      width: 100px;
+      line-height: 50px;
+    }
+  }
+
+.go-home{
+  width: 50px;
+  float: left;
+  line-height: 50px;
+  color: white;
+  text-align: center;
+  display: block;
+}
+
+p{
+  height: 50px;
+  text-align: center;
+  color: white;
+  margin: 0;
+  margin-top: 0px;
+}
+
+ul {
+  //text-align: center;
+  margin: 0 auto;
+  width: 300px;
+  height: 50px;
+  padding: 0px;
+  li{
+    list-style: none;
+    float: left;
+    padding: 0px;
+    text-align: center;
+    color:white;
+    width: 75px;
+    line-height: 50px;
+    p{
+    font-size: 10px;
+    display: block;
+    transition-duration: 1s;
+      &:hover{
+        background-color: pink;
+        }
+      }
+    }
+}
+.testimage {
+text-align: center;
+  img{
+    margin: 2px;
+  }
 }
