--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -30,7 +30,7 @@
   <ul>
     <li>BUNGO NAKAMURA - Designer</li>
     <li>MICHI KANDA - Mentor</li>
-    <li>MAYA KATAGIRI - Engineer/li>
+    <li>MAYA KATAGIRI - Engineer/<li>
   </ul>
 
 <%= yield %>
