--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.field{
+	text-align: center;
+	margin: 20px;
+}
+input{
+	width: 300px;
+	height: 70px;
+	border-radius: 10px;
+
+
+}
+.actions{
+	text-align: center;
+}
