--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
          
           <div class="header-middle">VISUAL</br>EMOTION</div>
           <div class="header-right">
-            <%= link_to "ABOUT", "#", class: "aboutlink" %>
+            <%= link_to "ABOUT", "about.html", class: "aboutlink" %>
           </div>
            </div>
       </header>
@@ -33,7 +33,6 @@
       <div class="category">
         <p>PhotoType</p>
       </div>
-
     </div>
 
     <div class="sidemenu">
