--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,7 @@
         <header>
           <div class="header">
             <div class="header-left">
-              <i class="fa fa-bars"></i>
-              <p>MENU</p>
+              <i class="fa fa-bars">MENU</i>
              </div>
          
           <div class="header-middle">VISUAL</br>EMOTION</div>
@@ -30,19 +29,32 @@
       </div>
         <%= yield %>
     <div class="fixedmenu">
+
       <div class="category">
         <p>PhotoType</p>
       </div>
-    </div>
 
-    <div class="sidemenu">
-      <div class="toolbar">
+      <div class="sidemenu">
+        <div class="toolbar">
           <div id="open-sb" class="menu-icon menu-button menu-right">
-            <i class="fa fa-bars"></i>
-           <p>MENU</p>
+            <i class="fa fa-bars">MENU</i>
           </div>
         </div>
+      </div>
+      <div class ="go-home">↑</div>
+
+
+      <ul>
+        <li><P>ART</P></li>
+        <li><P>HUMAN</P></li>
+        <li><P>VIEW</P></li>
+        <li><P>OTHER</P></li>
+      </ul>
+
+
     </div>
+
+    
 
     <script>
   $( ".sidebar" ).simpleSidebar({
