--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -13,16 +13,16 @@ a:link {
   text-decoration:underline;
 }
 h1{
-  font-size: 5rem;
+  font-size: 7rem;
   color: white;
   font-family: serif;
   text-align: center;
   padding-left:100px;
   margin: 0;
-  margin-top: 100px;
+  margin-top: 200px;
 }
 h2{
-  font-size: 1rem;
+  font-size: 2rem;
   color: white;
   font-family: serif;
   text-align: center;
@@ -101,7 +101,7 @@ ul {
   background-image: image-url('bg_home01.jpg');
   background-size: cover;
   background-position: center;
-  height:550px;
+  height:650px;
   width: 100%;
   color: #fff;
 }
@@ -124,6 +124,7 @@ ul {
   }
 }
 
+
 /* Go Home Navigation
 -------------------------------*/
 .go-home{
@@ -133,6 +134,8 @@ ul {
   color: white;
   text-align: center;
   display: block;
+
+  font-size: 1rem;
 }
 
 /* Category
@@ -158,6 +161,32 @@ ul {
       line-height: 50px;
     }
   }
+}
+
+
+ul {
+  //text-align: center;
+  margin: 0 auto;
+  width: 300px;
+  height: 50px;
+  padding: 0px;
+  li{
+    list-style: none;
+    float: left;
+    padding: 0px;
+    text-align: center;
+    color:white;
+    width: 75px;
+    line-height: 50px;
+    p{
+    font-size: 10px;
+    display: block;
+    transition-duration: 1s;
+      &:hover{
+        background-color: pink;
+        }
+      }
+    }
 }
 
 /* Books 
