--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,3 +1,33 @@
+<!--固定メニューバー-->
+    <div class="fixedmenu">
+
+      <div class="category">
+        <p>PhotoType</p>
+      </div>
+
+      <div class="sidemenu">
+        <div class="toolbar">
+          <div id="open-sb" class="menu-icon menu-button menu-right">
+            <i class="fa fa-bars">MENU</i>
+          </div>
+        </div>
+      </div>
+      <div class ="go-home">↑</div>
+
+      
+      <ul>
+        <li><P>ART</P></li>
+        <li><P>HUMAN</P></li>
+        <li><P>VIEW</P></li>
+        <li><P>OTHER</P></li>
+      </ul>
+
+
+    </div>
+
+
+
+
 <div class="container testimage">
 <%= link_to image_tag('pic1.jpeg'), 'pic1.jpeg',:rel => "lightbox" %>
 
