--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -17,15 +17,15 @@
   </div>
   <div class="field">
     <%= f.label :image1 %><br>
-    <%= f.text_field :image1 %>
+    <%= f.file_field :image1 %>
   </div>
   <div class="field">
     <%= f.label :image2 %><br>
-    <%= f.text_field :image2 %>
+    <%= f.file_field :image2 %>
   </div>
   <div class="field">
     <%= f.label :image3 %><br>
-    <%= f.text_field :image3 %>
+    <%= f.file_field :image3 %>
   </div>
   <div class="field">
     <%= f.label :amazon_link %><br>
