--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <title>Visualemotion</title>
+   <%= stylesheet_link_tag    'contacts', media: 'all', 'data-turbolinks-track' => true %>
+   <%= javascript_include_tag 'vendor', 'data-turbolinks-track' => true %>
+   <%= csrf_meta_tags %>
+
+   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+   <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?4XU2G~E0OwQ%3D" charset="utf-8"></script>
+</head>
+
+
 <%= form_for @contact, :url => contact_confirm_path do |f| %>
   <div class="page-header">
     <h1>お問い合わせ</h1>
@@ -14,6 +27,9 @@
     </div>
   <% end %>
  
+
+<body>
+  <h1>お問い合わせ</h1>
   <table class="table">
     <tr>
       <th>名前<span class="text-danger">（必須）</span></th>
@@ -28,6 +44,10 @@
       <td><%= f.text_area :message %></td>
     </tr>
   </table>
+</body>
+<html>
+
   <%= f.submit '確認', class: 'btn btn-primary' %>
 <% end %>
+
 
