--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,27 +12,28 @@
   </head>
   <body id="wrapper">
       <div class="firstview">
+      </div>
+      <div class="viewlogo">
+        <%= image_tag 'logo.png' %>
+
+<!--  デザイン変更
         <header>
           <div class="header">
             <div class="header-left">
               <i class="fa fa-bars">MENU</i>
-             </div>
-         
-          <div class="header-middle">VISUAL</br>EMOTION</div>
-          <div class="header-right">
-            <%= link_to "ABOUT", "about.html", class: "aboutlink" %>
+            </div>
+              <div class="header-middle">VISUAL</br>EMOTION
+              </div>
+              <div class="header-right">
+              </div>
           </div>
-           </div>
-      </header>
+         </header>
         <h1>美意識に、革命を。</h1>
         <h2>たっと一目で、あなたの価値観に衝撃を与える写真集が、ここにある。</h2>
+      -->
       </div>
 
-
-
         <%= yield %>
-
-    
 
     <script>
   $( ".sidebar" ).simpleSidebar({
