--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -21,14 +21,16 @@
         <li><P>VIEW</P></li>
         <li><P>OTHER</P></li>
       </ul>
-
-
     </div>
+<!--  メニューバー終了　-->
+
+
 
 
 
 
 <div class="container testimage">
+
 <%= link_to image_tag('pic1.jpeg'), 'pic1.jpeg',:rel => "lightbox" %>
 
 <%= link_to image_tag('pic1.jpeg'), books_path %>
@@ -60,5 +62,3 @@
   </div>
 
 </html>
-
-books_path
