--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -6,15 +6,13 @@
       </div>
 
       <div class="sidemenu">
-        <div class="toolbar">
+        <div class="navbar">
           <div id="open-sb" class="menu-icon menu-button menu-right">
             <i class="fa fa-bars">MENU</i>
           </div>
         </div>
       </div>
       <div class ="go-home">↑</div>
-
-      
       <ul>
         <li><P>ART</P></li>
         <li><P>HUMAN</P></li>
@@ -23,6 +21,9 @@
       </ul>
     </div>
 <!--  メニューバー終了　-->
+
+
+
 
 
 
@@ -60,5 +61,6 @@
   <a href="lightbox/pic20.jpeg" data-lightbox="pic20"></a>
   <a href="lightbox/pic.jpeg" data-lightbox="pic"></a> -->
   </div>
+
 
 </html>
