--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script type="text/javascript" src="//typesquare.com/accessor/script/typesquare.js?4XU2G~E0OwQ%3D" charset="utf-8"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
   </head>
   <body id="wrapper">
       <div class="firstview">
@@ -35,24 +37,6 @@
 
         <%= yield %>
 
-    <script>
-  $( ".sidebar" ).simpleSidebar({
-      settings: {
-        opener: ".button",
-        wrapper: ".wrapper",
-        animation: {
-          easing: "easeOutQuint"
-        }
-      },
-      sidebar: {
-        align: "right",
-        width: 300,
-        closingLinks: 'a',
-         style: {
-            zIndex: 100
-        }
-      }
-    });
-  </script>
+   
   </body>
 </html>
