--- a/app/views/about/about.html.erb
+++ b/app/views/about/about.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'about', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<%= link_to 'HOME', 'top' %>
 
 <body>
   <h1>本×写真=写真集</h1>
@@ -32,6 +33,10 @@
     <li>MICHI KANDA - Mentor</li>
     <li>MAYA KATAGIRI - Engineer/<li>
   </ul>
+
+
+<%= link_to '利用規約', 'law' %>
+
 
 <%= yield %>
 
