--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -7,6 +7,7 @@ $font-family-sans-serif:  "リュウミン L-KL", "Ryumin Light KL", "Hiragino K
 body{
   margin: 0;
   padding: 0;
+  height: 3000px;
 }
 a:link {
   font-style:normal;
