--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -43,22 +43,14 @@
       <div id="site-maker">
         <div class="message-header">SITE MAKER</div>
           <ul>
-            <li><font color="#00bfff"> BUNGO NAKAMURA</font> - Designer</li>
-            <li><font color="#90ee90"> MICHI KANDA</font> - Mentor</li>
-            <li><font color="pink"> MAYA KATAGIRI</font> - Engineer</li>
+            <li><font color="#00bfff"> BUNGO NAKAMURA</font> - Designer</li><br>
+            <li><font color="#90ee90"> MICHI KANDA</font> - Mentor</li><br>
+            <li><font color="pink"> MAYA KATAGIRI</font> - Engineer</li><br>
           </ul>
         </div>
       </div>
     </div>
   </div>
-
-  <h3>SITE MAKER</h3>
-  <ul>
-    <li>BUNGO NAKAMURA - Designer</li>
-    <li>MICHI KANDA - Mentor</li>
-    <li>MAYA KATAGIRI - Engineer/<li>
-  </ul>
-
 
 <%= yield %>
 
